link now spans the whole dropdown
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/trunk@43828 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 Collapsing Pages Changelog
 
+0.2.1 (2008.05.01)
+  * Link now spans the whole dropdown
+
 0.2 (2008.04.30)
   * Now includes the possibility of providing a drop-down menu of pages and
     sub-pages, instead of a nested list. Only useful for a header navigation 
