added screenshot and readme info \ added more styling
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/trunk@43830 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@ Collapsing Pages Changelog
 
 0.2.1 (2008.05.01)
   * Link now spans the whole dropdown
+  * Now indicates the presence of an additional submenu (doesn't work in IE 6
+    or less)
 
 0.2 (2008.04.30)
   * Now includes the possibility of providing a drop-down menu of pages and
