added option for expand/collapse icons; html validates
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/tags/0.2.1@47582 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 Collapsing Pages Changelog
 
+0.2.2 (2008.05.23)
+  * Re-fixed code so that xhtml validates
+  * Added option for different expand and collapse icons
+
 0.2.1 (2008.05.01)
   * Link now spans the whole dropdown
   * Now indicates the presence of an additional submenu (doesn't work in IE 6
