added several options \ calling it version 0.2.3
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/trunk@54787 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
 Collapsing Pages Changelog
 
+0.2.3 (2008.07.14)
+  * Added option to automatically expand some pages
+  * Added option to control the number of levels of pages which are expanded
+  * Added "self" class to pages in list which match the current page. No link
+    is made for these. CSS can
+    then be used to style these differently
+
 0.2.2 (2008.05.23)
   * Re-fixed code so that xhtml validates
   * Added option for different expand and collapse icons
