--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 Collapsing Pages Changelog
 
+0.2.4 (2008.10.28)
+  * fixed bug with mixing seventh argument to getSubPage when called recursively
+
 0.2.3 (2008.07.14)
   * Added option to automatically expand some pages
   * Added option to control the number of levels of pages which are expanded
