fixed bug with autoExpand
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/tags/0.2.4@71683 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,10 @@
 Collapsing Pages Changelog
 
+0.2.5 (2008.11.01)
+  * fixed bug in that autoExpand was not available to getSubPage
+
 0.2.4 (2008.10.28)
-  * fixed bug with mixing seventh argument to getSubPage when called recursively
+  * fixed bug with missing seventh argument to getSubPage when used recursively
 
 0.2.3 (2008.07.14)
   * Added option to automatically expand some pages
