--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,10 @@
 Collapsing Pages Changelog
 
-0.2.4 (2008.08.26)
-  * Minor change to css to add some bullets
+0.2.5 (2008.11.01)
+  * fixed bug in that autoExpand was not available to getSubPage
+
+0.2.4 (2008.10.28)
+  * fixed bug with missing seventh argument to getSubPage when used recursively
 
 0.2.3 (2008.07.14)
   * Added option to automatically expand some pages
