not loading unnecessary code for admin  pages
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/trunk@84894 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 Collapsing Pages Changelog
 
+* 0.3.2 (2009/01/07)
+    * not loading unnecessary code for admin pages
+
 * 0.3.1 (2009/01/06)
     * Finally fixed disappearing widget problem when trying to add to sidebar
     * Added debugging option to show the query used and the output
