--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ Collapsing Pages Changelog
 
 * 0.3.2 (2009/01/07)
     * not loading unnecessary code for admin pages
+    * added version to javascript file
 
 * 0.3.1 (2009/01/06)
     * Finally fixed disappearing widget problem when trying to add to sidebar
