--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,11 @@
 Collapsing Pages Changelog
 
-* 0.3.2 (2009/01/20)
+* 0.3.3 (2009/01/20)
 		* now 'self' class gets attributed to <a> instead of <li>, so it doesn't
 		  apply to all subpages when a parent page is selected
     * changed 'inline' to 'block', which fixes formatting
+		* If current page is a subpage, the parent page is automatically expanded
+		  in the list
 
 * 0.3.2 (2009/01/07)
     * added version to javascript file
