--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 Collapsing Pages Changelog
 
+* 0.3.5 (2009/02/04)
+    * Updated internationalization support
+    * Can now exclude and auto-expand using page slug or ID
+    * Added option to make clicking on parent page expand sub-pages
+
 * 0.3.4 (2009/01/21)
     * removed debugging info
     * fixed settings panel
