totally revised style selecting options
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/trunk@93477 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 Collapsing Pages Changelog
 
+* 0.4 (2009/02/10)
+    * totally revised and improved style selecting methods
+
 * 0.3.5 (2009/02/04)
     * Updated internationalization support
     * Can now exclude and auto-expand using page slug or ID
