fixed settings panel issue
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/trunk@93705 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ Collapsing Pages Changelog
 
 * 0.4 (2009/02/10)
     * totally revised and improved style selecting methods
+    * fixed settings panel issue
 
 * 0.3.5 (2009/02/04)
     * Updated internationalization support
