--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ Collapsing Pages Changelog
 * 0.4 (2009/02/10)
     * totally revised and improved style selecting methods
     * fixed settings panel issue
+    * reduced number of queries
 
 * 0.3.5 (2009/02/04)
     * Updated internationalization support
