--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 Collapsing Pages Changelog
 
+* 0.4.1 (2009/03/005)
+     * TODO fix include
 * 0.4 (2009/02/17)
     * totally revised and improved style selecting methods
     * fixed settings panel issue
