fixed bug with wrong url to images
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/trunk@111268 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 Collapsing Pages Changelog
 
+* 0.4.2 (2009/04/18)
+    * Fixed bug with wrong url to images
+
 * 0.4.1 (2009/04/16)
     * Added option for custom symbols
 
