--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,8 @@
 Collapsing Pages Changelog
 
-* 0.4.2 (2009/04/18)
+* 0.4.2 (2009/04/17)
     * Fixed bug with wrong url to images
+    * Fixed bug with unicode codes showing up on page load instead of triangles
 
 * 0.4.1 (2009/04/16)
     * Added option for custom symbols
