most things working with WP 2.8
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/tags/0.5.alpha@114420 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/collapsing-pages-de_DE.po
+++ b/collapsing-pages-de_DE.po
@@ -120,7 +120,7 @@ msgid "these pages (input slug or ID separated by commas):"
 msgstr "dieser Seiten (URL-Form oder ID durch Kommata getrennt eingeben):"
 
 #: collapsPageOptions.php:52
-msgid "Auto-expand these categories (input slug or ID separated by commas):"
+msgid "Auto-expand these pages (input slug or ID separated by commas):"
 msgstr "Diese Kategorien automatisch aufklappen (URL-Form oder ID durch Kommata getrennt eingeben):"
 
 #: collapsPageOptions.php:55
@@ -158,7 +158,7 @@ msgstr "Anzeigeoptionen:"
 
 #: collapsPageUI.php:75
 msgid ""
-"If you wish to use the collapsing categories plugin as a widget, you\n"
+"If you wish to use the collapsing pages plugin as a widget, you\n"
 "    should set the options in the widget page (except for custom styling,\n"
 "    which is set here). If you would like to use it manually (that is, you\n"
 "    modify your theme), then click below to delete the current widget options."
