updated version info
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/tags/0.5.alpha@115384 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 Collapsing Pages Changelog
 
+* 0.5.alpha
+    * Added option to collapse widget
+    * Compatible with WP 2.8 (not backwards compatible)
+    * When using manually, can specify settings directly in code
+
 * 0.4.2 (2009/04/17)
     * Fixed bug with wrong url to images
     * Fixed bug with unicode codes showing up on page load instead of triangles
