fixed html validation error
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/trunk@116019 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 Collapsing Pages Changelog
 
+* 0.4.3 (2009/05/06) 
+    * Fixed html validation error
+
 * 0.4.2 (2009/04/17)
     * Fixed bug with wrong url to images
     * Fixed bug with unicode codes showing up on page load instead of triangles
