--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 Collapsing Pages Changelog
 
+* 0.5.1 
+    TODO: auto-expand from parent
+
 * 0.5.alpha
     * Added option to collapse widget
     * Compatible with WP 2.8 (not backwards compatible)
