--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 Collapsing Pages Changelog
+* 0.5.0
+    * Fixed menuorder option
+    * Fixed problem with multiple instances
+
 * 0.5.beta
     * A few more tweaks
 
