--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,8 @@
 Collapsing Pages Changelog
-* 0.5.0
+* 0.5.1
     * Fixed menuorder option
     * Fixed problem with multiple instances
+    * Fixed problems with cookies on page load
 
 * 0.5.beta
     * A few more tweaks
