calling it a development version
git-svn-id: https://plugins.svn.wordpress.org/collapsing-pages/trunk@133325 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,12 @@
 Collapsing Pages Changelog
+* 0.5.2 (2009.07.07)
+    * Added advanced options section in configuration
+    * Added option to remember expanding and collapsing for each visitor
+      (using cookies)
+    * Now issuing a correct id for each ul when using widgets 
+    * Now using correct right triangle symbol
+    * Small change in manual installation
+
 * 0.5.1
     * Fixed menuorder option
     * Fixed problem with multiple instances
