--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 Collapsing Pages Changelog
+* 0.5.3 (2009.07.xx)
+    * Fixed html validation error
+    * TODO Added translations for X
+    * TODO child_of feature
+
 * 0.5.2 (2009.07.07)
     * Added advanced options section in configuration
     * Added option to remember expanding and collapsing for each visitor
